test_regress/t/t_let.out
%Error-UNSUPPORTED: t/t_let.v:8:4: Unsupported: let
    8 |    let P = 11;
      |    ^~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_let.v:13:4: Unsupported: let
   13 |    let A = 10;
      |    ^~~
%Error-UNSUPPORTED: t/t_let.v:14:4: Unsupported: let
   14 |    let B() = 20;
      |    ^~~
%Error-UNSUPPORTED: t/t_let.v:13:14: Unsupported: let ports
   13 |    let A = 10;
      |              ^
%Error-UNSUPPORTED: t/t_let.v:15:4: Unsupported: let
   15 |    let C(a) = 30 + a;
      |    ^~~
%Error-UNSUPPORTED: t/t_let.v:15:13: Unsupported: let ports
   15 |    let C(a) = 30 + a;
      |             ^
%Error-UNSUPPORTED: t/t_let.v:16:4: Unsupported: let
   16 |    let D(a, b) = 30 + a + b;
      |    ^~~
%Error-UNSUPPORTED: t/t_let.v:16:16: Unsupported: let ports
   16 |    let D(a, b) = 30 + a + b;
      |                ^
%Error-UNSUPPORTED: t/t_let.v:17:4: Unsupported: let
   17 |    let E(a, b=7) = 30 + a + b;
      |    ^~~
%Error-UNSUPPORTED: t/t_let.v:18:10: Unsupported: let untyped ports
   18 |    let F(untyped a) = 30 + a;
      |          ^~~~~~~
%Error-UNSUPPORTED: t/t_let.v:18:4: Unsupported: let
   18 |    let F(untyped a) = 30 + a;
      |    ^~~
%Error-UNSUPPORTED: t/t_let.v:19:10: Unsupported: let ports
   19 |    let G(int a) = 30 + a;
      |          ^~~
%Error-UNSUPPORTED: t/t_let.v:19:4: Unsupported: let
   19 |    let G(int a) = 30 + a;
      |    ^~~
%Error: Exiting due to
